--- a/pkg/negbin1/DESCRIPTION
+++ b/pkg/negbin1/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: negbin1
-Type: Package
 Title: Negative Binomial 1 Regression
 Version: 1.0
 Date: 2017-05-17
-Author:Susanne Berger
-Maintainer: Susanne Berger <susanne.berger@uibk.ac.at>
+Authors@R: person("Susanne", "Berger", role = c("aut", "cre"), email = "Susanne.Berger@uibk.ac.at")
 Description: Fit negative binomial 1 regression.
+Depends: R (>= 3.0.0)
+Imports: stats, Formula
+Suggests: MASS, VGAM
 License: GPL-2 | GPL-3
