--- a/pkg/negbin1/NAMESPACE
+++ b/pkg/negbin1/NAMESPACE
@@ -1,1 +1,15 @@
-exportPattern("^[[:alpha:]]+")
+import("stats", "Formula")
+
+export(
+  "negbin1",
+  "negbin1_fit",
+  "negbin1_control"
+)
+
+S3method("logLik", "negbin1")
+S3method("model.frame", "negbin1")
+S3method("model.matrix", "negbin1")
+S3method("predict", "negbin1")
+S3method("print", "negbin1")
+S3method("terms", "negbin1")
+
