changed version to 0.0-1
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@15 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/negbin1/DESCRIPTION
+++ b/pkg/negbin1/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: negbin1
 Title: Negative Binomial 1 Regression
-Version: 1.0
+Version: 0.0-1
 Date: 2017-05-17
 Authors@R: person("Susanne", "Berger", role = c("aut", "cre"), email = "Susanne.Berger@uibk.ac.at")
 Description: Fit negative binomial 1 regression.
