--- a/pkg/negbin1/DESCRIPTION
+++ b/pkg/negbin1/DESCRIPTION
@@ -6,5 +6,5 @@ Authors@R: person("Susanne", "Berger", role = c("aut", "cre"), email = "Susanne.
 Description: Fit negative binomial 1 regression.
 Depends: R (>= 3.0.0)
 Imports: stats, Formula
-Suggests: MASS, VGAM
+Suggests: MASS, VGAM, lmtest
 License: GPL-2 | GPL-3
