--- a/pkg/negbin1/DESCRIPTION
+++ b/pkg/negbin1/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Negative Binomial 1 Regression
 Version: 0.0-1
 Date: 2017-05-17
 Authors@R: person("Susanne", "Berger", role = c("aut", "cre"), email = "Susanne.Berger@uibk.ac.at")
-Description: Fit negative binomial 1 regression.
+Description: Negative binomial 1 regression models are provided. The negative binomial distribution is an often used alternative to the Poisson model, especially when doubts arise regarding the independence of the underlying process and the inclusion of all relevant regressors.
 Depends: R (>= 3.0.0)
 Imports: stats, Formula
 Suggests: MASS, VGAM, lmtest
