Changed title in description (capital letters)
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@23 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/fgamma/DESCRIPTION
+++ b/pkg/fgamma/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: fgamma
-Title: Full gamma regression 
+Title: Full Gamma Regression 
 Version: 0.0-1
 Date: 2017-05-22
 Authors@R: person("Daniel", "Gstrein", role = c("aut", "cre"), email = "Daniel.Gstrein@uibk.ac.at")
