--- a/pkg/dtree/NAMESPACE
+++ b/pkg/dtree/NAMESPACE
@@ -33,6 +33,7 @@ S3method("coef", "dfit")
 S3method("logLik", "dfit")
 S3method("nobs", "dfit")
 S3method("predict", "dfit")
+S3method("estfun", "dfit")
 
 S3method("print", "dtree")
 S3method("coef", "dtree")
