edit NnDd return of (x,y); check NAMESPACE why s3 methods cant be found after installing package..?
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@46 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NnDd/NAMESPACE
+++ b/pkg/NnDd/NAMESPACE
@@ -1,17 +1,4 @@
-import("stats", "Formula")
-
-
-export("gen_data", 
-"NnDd", 
-"nndd_reshape",
-"nndd_reshape_other",
-"predict_fun_glm",
-"nndd_ttest",
-"nndd_ttest")
-
-S3method("plot", "NnDd")
-S3method("predict", "NnDd")
-S3method("print", "NnDd")
+import("stats", "Formula") export("gen_data", "NnDd", "nndd_reshape","nndd_reshape_other","predict_fun_glm","nndd_ttest") S3method("plot", "NnDd") S3method("predict", "NnDd") S3method("print", "NnDd") S3method("ttest", "NnDd")
 
 
 
