--- a/pkg/GmmEst/DESCRIPTION
+++ b/pkg/GmmEst/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: GmmEst
-Title: Model estimation by GMM
+Title: Model Estimation by GMM
 Version: 0.0-1
 Date: 2017-05-24
-Authors@R: person("Markus G.", "Schmidt", role = c("aut", "cre"), email = "markus.g.schmidt@uibk.ac.at")
-Description: GMM estimation framework is provided. One-step, Two-step and iterative GMM estimation of a user-specified model is implemented.  
+Authors@R: person(c("Markus", "G."), "Schmidt", role = c("aut", "cre"), email = "markus.g.schmidt@uibk.ac.at")
+Description: GMM estimation framework is provided. One-step, two-step and iterative GMM estimation of a user-specified model is implemented.  
 Depends: R (>= 3.0.0)
 Imports: stats
 Suggests: gmm
