--- a/pkg/ditree/DESCRIPTION
+++ b/pkg/ditree/DESCRIPTION
@@ -5,4 +5,6 @@ Date: 2017-05-17
 Author: Lisa Schlosser
 Maintainer: Lisa Schlosser <Lisa.Schlosser@uibk.ac.at>
 Description: Build a tree fitting a distributional model in each node
+Depends: R (>= 3.1.0), partykit (>= 1.2-0), gamlss.dist
+Imports: graphics, stats
 License: GPL-2 | GPL-3
