added imports from 'stats'
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@70 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ditree/NAMESPACE
+++ b/pkg/ditree/NAMESPACE
@@ -11,7 +11,14 @@ importFrom("stats",
   "optim",
   "qnorm",
   "weighted.mean"
+  "as.formula", 
+  "coef", 
+  "family", 
+  "integrate",
+  "logLik", 
+  "predict"
 )
+
 importFrom("sandwich",
   "bread",
   "estfun"
