--- a/pkg/fgamma/NAMESPACE
+++ b/pkg/fgamma/NAMESPACE
@@ -1,4 +1,6 @@
 import("stats", "Formula")
+importFrom("sandwich", "bread", "estfun")
+importFrom("numDeriv", "grad", "hessian")
 
 export(
   "fgamma",
