added imports from 'stats'
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@73 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ditree/NAMESPACE
+++ b/pkg/ditree/NAMESPACE
@@ -9,15 +9,16 @@ importFrom("graphics",
 importFrom("stats",
   "nobs",
   "optim",
-  "qnorm",
-  "weighted.mean"
-  "as.formula", 
+  "qnorm", 
   "coef", 
   "family", 
   "integrate",
   "logLik", 
-  "predict"
+  "predict",
+  "as.formula", 
+  "weighted.mean"
 )
+
 
 importFrom("sandwich",
   "bread",
