added imports from 'survival' and 'Formula'
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@79 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ditree/NAMESPACE
+++ b/pkg/ditree/NAMESPACE
@@ -1,6 +1,7 @@
 import("partykit")
 import("gamlss.dist")
-importFrom("disttree", "make_dist_list")
+importFrom("disttree", 
+   "make_dist_list")
 importFrom("graphics",
   "plot",
   "hist",
@@ -18,8 +19,12 @@ importFrom("stats",
   "as.formula", 
   "weighted.mean"
 )
-
-
+importFrom("Formula",
+  "as.Formula"
+)
+importFrom("survival",
+  "is.Surv"
+)
 importFrom("sandwich",
   "bread",
   "estfun"
