--- a/pkg/htobit/NAMESPACE
+++ b/pkg/htobit/NAMESPACE
@@ -1,6 +1,7 @@
 import("stats", "Formula")
 importFrom("sandwich", "bread", "estfun")
 importFrom("numDeriv", "grad", "hessian")
+importFrom("car", "Boot")
 
 export(
   "htobit",
@@ -9,6 +10,7 @@ export(
 )
 
 ## methods for htobit
+S3method("Boot", "htobit")
 S3method("bread", "htobit")
 S3method("coef", "htobit")
 S3method("estfun", "htobit")
@@ -18,7 +20,9 @@ S3method("model.frame", "htobit")
 S3method("model.matrix", "htobit")
 S3method("predict", "htobit")
 S3method("print", "htobit")
+S3method("residuals", "htobit")
 S3method("summary", "htobit")
 S3method("print", "summary.htobit")
 S3method("terms", "htobit")
+S3method("update", "htobit")
 S3method("vcov", "htobit")
