one control function again, changed example, implemented Jtest in print output, small changes in code due to bugs
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@87 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/GmmEst/NAMESPACE
+++ b/pkg/GmmEst/NAMESPACE
@@ -1,9 +1,8 @@
-import("stats")
+import("stats","numDeriv")
 
 export(
   "GmmEst",
-  "GmmEst_est_control",
-  "GmmEst_optim_control"
+  "GmmEst_control"
 )
 
 ## methods for GmmEst
