--- a/pkg/GmmEst/DESCRIPTION
+++ b/pkg/GmmEst/DESCRIPTION
@@ -5,6 +5,6 @@ Date: 2017-05-24
 Authors@R: person(c("Markus", "G."), "Schmidt", role = c("aut", "cre"), email = "markus.g.schmidt@uibk.ac.at")
 Description: GMM estimation framework is provided. One-step, two-step and iterative GMM estimation of a user-specified model is implemented.  
 Depends: R (>= 3.0.0)
-Imports: stats
+Imports: stats, numDeriv
 Suggests: gmm
 License: GPL-2 | GPL-3
