added S3 methods nobs, vcov and code to compute a simple vcov.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@95 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/GmmEst/NAMESPACE
+++ b/pkg/GmmEst/NAMESPACE
@@ -7,4 +7,6 @@ export(
 
 ## methods for GmmEst
 S3method("coef", "GmmEst")
+S3method("nobs", "GmmEst")
+S3method("vcov", "GmmEst")
 S3method("print", "GmmEst")
