--- a/pkg/htobit/NAMESPACE
+++ b/pkg/htobit/NAMESPACE
@@ -2,6 +2,7 @@ import("stats", "Formula")
 importFrom("sandwich", "bread", "estfun")
 importFrom("numDeriv", "grad", "hessian")
 importFrom("car", "Boot")
+importFrom("memisc", "getSummary", "setSummaryTemplate")
 
 export(
   "htobit",
@@ -15,6 +16,7 @@ S3method("bread", "htobit")
 S3method("coef", "htobit")
 S3method("estfun", "htobit")
 S3method("fitted", "htobit")
+S3method("getSummary", "htobit")
 S3method("logLik", "htobit")
 S3method("model.frame", "htobit")
 S3method("model.matrix", "htobit")
