--- a/pkg/htobit/NAMESPACE
+++ b/pkg/htobit/NAMESPACE
@@ -2,12 +2,12 @@ import("stats", "Formula")
 importFrom("sandwich", "bread", "estfun")
 importFrom("numDeriv", "grad", "hessian")
 importFrom("car", "Boot")
-importFrom("memisc", "getSummary", "setSummaryTemplate")
 
 export(
   "htobit",
   "htobit_control",
-  "htobit_fit"
+  "htobit_fit",
+  "getSummary.htobit"
 )
 
 ## methods for htobit
@@ -16,7 +16,6 @@ S3method("bread", "htobit")
 S3method("coef", "htobit")
 S3method("estfun", "htobit")
 S3method("fitted", "htobit")
-S3method("getSummary", "htobit")
 S3method("logLik", "htobit")
 S3method("model.frame", "htobit")
 S3method("model.matrix", "htobit")
