added importFrom numDeriv
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@98 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/negbin1/NAMESPACE
+++ b/pkg/negbin1/NAMESPACE
@@ -1,4 +1,6 @@
-import("stats", "Formula", "numDeriv")
+import("stats", "Formula")
+importFrom("sandwich", "bread", "estfun")
+importFrom("numDeriv", "grad", "hessian")
 
 export(
   "negbin1",
