--- a/pkg/negbin1/NAMESPACE
+++ b/pkg/negbin1/NAMESPACE
@@ -1,16 +1,24 @@
 import("stats", "Formula")
+importFrom("sandwich", "bread", "estfun")
 importFrom("numDeriv", "grad", "hessian")
 
 export(
   "negbin1",
+  "negbin1_control",
   "negbin1_fit",
-  "negbin1_control"
+  "getSummary.negbin1"
 )
 
+S3method("bread", "negbin1")
+S3method("estfun", "negbin1")
 S3method("logLik", "negbin1")
 S3method("model.frame", "negbin1")
 S3method("model.matrix", "negbin1")
 S3method("predict", "negbin1")
 S3method("print", "negbin1")
+S3method("residuals", "negbin1")
+S3method("summary", "negbin1")
+S3method("print", "summary.negbin1")
 S3method("terms", "negbin1")
-
+S3method("update", "negbin1")
+S3method("vcov", "negbin1")
