tiny touch ups in manual, changed date and version number consistent naming in ngr and nll adding estfun()-, bread()- and vcov()-method
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@109 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/hetprobit/NAMESPACE
+++ b/pkg/hetprobit/NAMESPACE
@@ -1,5 +1,5 @@
 import("stats", "Formula")
-importFrom("numDeriv", "grad", "hessian")
+importFrom("sandwich", "bread", "estfun")
 
 export(
   "hetprobit",
@@ -8,11 +8,13 @@ export(
 )
 
 ## methods for hetprobit
+S3method("bread", "hetprobit")
 S3method("coef", "hetprobit")
+S3method("estfun", "hetprobit")
 S3method("logLik", "hetprobit")
-S3method("print", "hetprobit")
-S3method("terms", "hetprobit")
 S3method("model.frame", "hetprobit")
 S3method("model.matrix", "hetprobit")
 S3method("predict", "hetprobit")
-
+S3method("print", "hetprobit")
+S3method("terms", "hetprobit")
+S3method("vcov", "hetprobit")
