--- a/pkg/hetprobit/DESCRIPTION
+++ b/pkg/hetprobit/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: hetprobit
 Title: Heteroscedastic Probit Regression Models
-Version: 0.0-1
-Date: 2017-05-24
+Version: 0.0-2
+Date: 2017-06-06
 Authors@R: person("Judith", "Santer", role = c("aut", "cre"), email = "Judith.Santer@uibk.ac.at")
 Description: Heteroscedastic probit models are provided. In standard probit models the variance of the error term is assumed to be constant. Heteroscedastic probit models allow the error terms to vary systematically.
 Depends: R (>= 3.0.0)
-Imports: stats, Formula, numDeriv
-Suggests: glmx, lmtest
+Imports: stats, Formula, sandwich
+Suggests: glmx, lmtest, numDeriv
 License: GPL-2 | GPL-3
