--- a/pkg/negbin1/DESCRIPTION
+++ b/pkg/negbin1/DESCRIPTION
@@ -6,5 +6,5 @@ Authors@R: person("Susanne", "Berger", role = c("aut", "cre"), email = "Susanne.
 Description: Negative binomial 1 regression models are provided. The negative binomial distribution is an often used alternative to the Poisson model, especially when doubts arise regarding the independence of the underlying process and the inclusion of all relevant regressors.
 Depends: R (>= 3.0.0)
 Imports: stats, Formula, numDeriv, sandwich
-Suggests: MASS, VGAM, lmtest, memisc
+Suggests: MASS, VGAM, lmtest, memisc, gamlss
 License: GPL-2 | GPL-3
