S3method coef added
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@116 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/negbin1/NAMESPACE
+++ b/pkg/negbin1/NAMESPACE
@@ -11,6 +11,7 @@ export(
 
 S3method("bread", "negbin1")
 S3method("estfun", "negbin1")
+S3method("coef", "negbin1")
 S3method("logLik", "negbin1")
 S3method("model.frame", "negbin1")
 S3method("model.matrix", "negbin1")
