--- a/pkg/fgamma/DESCRIPTION
+++ b/pkg/fgamma/DESCRIPTION
@@ -6,5 +6,5 @@ Authors@R: person("Daniel", "Gstrein", role = c("aut", "cre"), email = "Daniel.G
 Description: Full gamma regression modeling the mu (mean) and sigma parameter as functions of explanatory variables using a "log" link for both parameters. 
 Depends: R(>= 3.0.0)
 Imports: stats, Formula, numDeriv, sandwich
-Suggests: lmtest, gamlss
+Suggests: lmtest, gamlss, memisc, car, boot
 License: Apache License 2.0
