--- a/pkg/hetprobit/NAMESPACE
+++ b/pkg/hetprobit/NAMESPACE
@@ -1,5 +1,6 @@
 import("stats", "Formula")
 importFrom("sandwich", "bread", "estfun")
+importFrom("numDeriv", "grad", "hessian")
 
 export(
   "hetprobit",
