--- a/pkg/ditree/NAMESPACE
+++ b/pkg/ditree/NAMESPACE
@@ -1,12 +1,25 @@
 import("partykit")
 import("gamlss.dist")
 importFrom("disttree", 
-   "make_dist_list")
+   "make_dist_list"
+   )
 importFrom("graphics",
   "plot",
   "hist",
   "lines"
 )
+importFrom("sandwich", 
+  "bread", 
+  "estfun"
+)
+importFrom("car", 
+  "Boot"
+)
+importFrom("boot", 
+  "boot"
+)
+importFrom("utils", 
+  "getAnywhere")
 importFrom("stats",
   "nobs",
   "optim",
@@ -17,18 +30,18 @@ importFrom("stats",
   "logLik", 
   "predict",
   "as.formula", 
-  "weighted.mean"
+  "weighted.mean",
+  "formula", 
+  "na.omit", 
+  "pnorm", 
+  "printCoefmat",
+  "quantile", 
+  "update"
 )
 importFrom("Formula",
   "as.Formula"
 )
-importFrom("survival",
-  "is.Surv"
-)
-importFrom("sandwich",
-  "bread",
-  "estfun"
-)
+
 
 
 export(
@@ -39,8 +52,11 @@ export(
   "ditree",
 
   ## generating optimization control list
-  "di_ocontrol"
+  "di_ocontrol",
+  
+  "getSummary.difit"
 )
+
 
 ## methods
 S3method("coef", "difit")
@@ -48,6 +64,13 @@ S3method("logLik", "difit")
 S3method("nobs", "difit")
 S3method("predict", "difit")
 S3method("estfun", "difit")
+S3method("bread", "difit")
+S3method("vcov", "difit")
+S3method("summary", "difit")
+S3method("print", "difit")
+S3method("print", "summary.difit")
+S3method("residuals", "difit")
+S3method("update", "difit")
 
 S3method("print", "ditree")
 S3method("coef", "ditree")
