--- a/pkg/hetprobit/NAMESPACE
+++ b/pkg/hetprobit/NAMESPACE
@@ -12,10 +12,12 @@ export(
 S3method("bread", "hetprobit")
 S3method("coef", "hetprobit")
 S3method("estfun", "hetprobit")
+S3method("fitted", "hetprobit")
 S3method("logLik", "hetprobit")
 S3method("model.frame", "hetprobit")
 S3method("model.matrix", "hetprobit")
 S3method("predict", "hetprobit")
 S3method("print", "hetprobit")
+S3method("residuals", "hetprobit")
 S3method("terms", "hetprobit")
 S3method("vcov", "hetprobit")
