--- a/pkg/hetprobit/NAMESPACE
+++ b/pkg/hetprobit/NAMESPACE
@@ -18,6 +18,9 @@ S3method("model.frame", "hetprobit")
 S3method("model.matrix", "hetprobit")
 S3method("predict", "hetprobit")
 S3method("print", "hetprobit")
+S3method("print", "summary.hetprobit")
 S3method("residuals", "hetprobit")
+S3method("summary", "hetprobit")
 S3method("terms", "hetprobit")
+S3method("update", "hetprobit")
 S3method("vcov", "hetprobit")
