git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@148 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/nndd/NAMESPACE
+++ b/pkg/nndd/NAMESPACE
@@ -1,4 +1,4 @@
-import("stats", "Formula")
+import("stats", "Formula", "multiwayvcov")
 
 
 export("nndd_dgp", 
@@ -12,7 +12,8 @@ S3method("plot", "nndd")
 S3method("predict", "nndd")
 S3method("print", "nndd")
 S3method("t.test", "nndd")
-
+S3method("vcov", "nndd")
+S3method("summary","nndd")
 
 
 
