--- a/pkg/hetprobit/NAMESPACE
+++ b/pkg/hetprobit/NAMESPACE
@@ -1,6 +1,7 @@
 import("stats", "Formula")
 importFrom("sandwich", "bread", "estfun")
 importFrom("numDeriv", "grad", "hessian")
+importFrom("memisc", "getSummary")
 
 export(
   "hetprobit",
@@ -13,6 +14,7 @@ S3method("bread", "hetprobit")
 S3method("coef", "hetprobit")
 S3method("estfun", "hetprobit")
 S3method("fitted", "hetprobit")
+S3method("getSummary", "hetprobit")
 S3method("logLik", "hetprobit")
 S3method("model.frame", "hetprobit")
 S3method("model.matrix", "hetprobit")
