new nndd S3 functions vcov summary waldtest and lmc S3 functions summary changed functions nndd plot
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@156 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/nndd/NAMESPACE
+++ b/pkg/nndd/NAMESPACE
@@ -1,8 +1,7 @@
-import("stats", "Formula", "multiwayvcov")
+import("stats", "Formula", "multiwayvcov", "lmtest")
 
 
-export("nndd_dgp", 
-"nndd", 
+export("nndd", 
 "nndd_reshape",
 "nndd_reshape_other",
 "predict_fun_glm",
