--- a/pkg/nndd/DESCRIPTION
+++ b/pkg/nndd/DESCRIPTION
@@ -4,6 +4,6 @@ Version: 0.0-1
 Date: 2017-06-13
 Authors@R: person("Michal", "Lapinski", role = c("aut", "cre"), email = "Michael.Lapinski@JKU.at") 
 Depends: R (>= 3.0.0)
-Imports: stats, Formula
+Imports: stats, Formula, multiwayvcov, lmtest
 Description: The treatment effect is estimated by applying nearest neighbours matching (NN) and difference in differences (DD). Nearest neighbours are matched by aplying a GLM over an individual time horizont. In the following a liner model is estimated with a difference in defference setup. Each estimation (NN or DD) can depend on different covariates. Simple evaluation methods of the combined estimation are provided.
 License: GPL-2 | GPL-3
