some improts added which were suggested by R-Forge
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@157 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/nndd/NAMESPACE
+++ b/pkg/nndd/NAMESPACE
@@ -1,5 +1,9 @@
 import("stats", "Formula", "multiwayvcov", "lmtest")
 
+importFrom("grDevices", "dev.flush", "dev.hold", "dev.interactive",
+             "devAskNewPage")
+
+importFrom("graphics", "lines", "par", "plot", "plot.new")
 
 export("nndd", 
 "nndd_reshape",
