introduce class lmc for clustered lm
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@161 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/nndd/NAMESPACE
+++ b/pkg/nndd/NAMESPACE
@@ -17,6 +17,8 @@ S3method("print", "nndd")
 S3method("t.test", "nndd")
 S3method("vcov", "nndd")
 S3method("summary","nndd")
+S3method("vcov","lmc")
+S3method("summary","lmc")
 
 
 
