change summary functions and nndd to display only coefs of interest
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@162 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/nndd/NAMESPACE
+++ b/pkg/nndd/NAMESPACE
@@ -19,7 +19,7 @@ S3method("vcov", "nndd")
 S3method("summary","nndd")
 S3method("vcov","lmc")
 S3method("summary","lmc")
-
+S3method("getSummary","lm")
 
 
 
