--- a/pkg/nndd/NAMESPACE
+++ b/pkg/nndd/NAMESPACE
@@ -1,4 +1,4 @@
-import("stats", "Formula", "multiwayvcov", "lmtest")
+import("stats", "Formula", "multiwayvcov", "lmtest", "memisc")
 
 importFrom("grDevices", "dev.flush", "dev.hold", "dev.interactive",
              "devAskNewPage")
