many changes, too much to be listed here, e.g. vignette, bread, estfun, vcov_gt, extended man file, new dataset.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@181 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/GmmEst/NAMESPACE
+++ b/pkg/GmmEst/NAMESPACE
@@ -1,4 +1,7 @@
-import("stats","numDeriv")
+import("stats", "sandwich", "numDeriv")
+importFrom("sandwich", "bread", "estfun")
+importFrom("numDeriv", "genD")
+importFrom("MASS", "ginv")
 
 export(
   "GmmEst",
@@ -10,3 +13,7 @@ S3method("coef", "GmmEst")
 S3method("nobs", "GmmEst")
 S3method("vcov", "GmmEst")
 S3method("print", "GmmEst")
+S3method("summary", "GmmEst")
+S3method("print", "summary.GmmEst")
+S3method("estfun", "GmmEst")
+S3method("bread", "GmmEst")
