--- a/pkg/GmmEst/DESCRIPTION
+++ b/pkg/GmmEst/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: GmmEst
 Title: Model Estimation by GMM
 Version: 0.0-1
-Date: 2017-05-24
+Date: 2017-07-02
 Authors@R: person(c("Markus", "G."), "Schmidt", role = c("aut", "cre"), email = "markus.g.schmidt@uibk.ac.at")
 Description: GMM estimation framework is provided. One-step, two-step and iterative GMM estimation of a user-specified model is implemented.  
 Depends: R (>= 3.0.0)
-Imports: stats, numDeriv
-Suggests: gmm
+Imports: stats, numDeriv, sandwich, MASS
+Suggests: gmm, lmtest, car
 License: GPL-2 | GPL-3
