knitr also needed in Suggests
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@204 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/GmmEst/DESCRIPTION
+++ b/pkg/GmmEst/DESCRIPTION
@@ -6,6 +6,6 @@ Authors@R: person(c("Markus", "G."), "Schmidt", role = c("aut", "cre"), email = 
 Description: GMM estimation framework is provided. One-step, two-step and iterative GMM estimation of a user-specified model is implemented.  
 Depends: R (>= 3.0.0)
 Imports: stats, numDeriv, sandwich, MASS
-Suggests: gmm, lmtest, car
+Suggests: gmm, lmtest, car, knitr
 VignetteBuilder: knitr
 License: GPL-2 | GPL-3
