added plot method and imports update, AIC and vcov
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@212 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ditree/NAMESPACE
+++ b/pkg/ditree/NAMESPACE
@@ -36,7 +36,9 @@ importFrom("stats",
   "pnorm", 
   "printCoefmat",
   "quantile", 
-  "update"
+  "update",
+  "AIC",
+  "vcov"
 )
 importFrom("Formula",
   "as.Formula"
@@ -66,6 +68,7 @@ S3method("predict", "difit")
 S3method("estfun", "difit")
 S3method("bread", "difit")
 S3method("vcov", "difit")
+S3method("plot", "difit")
 S3method("summary", "difit")
 S3method("print", "difit")
 S3method("print", "summary.difit")
