added imports from stats and Formula
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/uibk-rprog-2017@251 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/ditree/NAMESPACE
+++ b/pkg/ditree/NAMESPACE
@@ -33,10 +33,14 @@ importFrom("stats",
   "quantile", 
   "update",
   "AIC",
-  "vcov"
+  "vcov",
+  "model.matrix", 
+  "model.response",
+  "terms"
 )
 importFrom("Formula",
-  "as.Formula"
+  "as.Formula",
+  "Formula"
 )
 
 
